objects/Research_Year__c.object
<CustomObject><fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Completion_of_year_of_instance__c</fullName>
        <description>For HESA FundComp value, to be set per year/period</description>
        <inlineHelpText>For HESA return</inlineHelpText>
        <label>Completion of year of instance</label>
        <picklist>
            <picklistValues>
                <fullName>Completed the current year of programme of study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did not complete the current year of programme of study</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Year of programme of study not yet completed, but has not failed to complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially completed the year of study (HEFCW HESES rules)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not in HESES Population</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>FUNDCOMP__c</fullName>
        <description>As per https://www.hesa.ac.uk/collection/c15051/a/fundcomp/</description>
        <formula>IF ( TEXT (Completion_of_year_of_instance__c ) = "Completed the current year of programme of study", "1",
   IF ( TEXT (Completion_of_year_of_instance__c) = "Did not complete the current year of programme of study", "2",
      IF ( TEXT(Completion_of_year_of_instance__c) = "Year of programme of study not yet completed, but has not failed to complete", "3",
         IF ( TEXT(Completion_of_year_of_instance__c) = "Partially completed the year of study (HEFCW HESES rules)", "4", 
                     IF ( TEXT(Completion_of_year_of_instance__c) = "Not in HESES Population", "9",  
                     Null)
         )
      )
   )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For HESA return</inlineHelpText>
        <label>FUNDCOMP</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Period_End_Date__c</fullName>
        <label>Period End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Period_Number__c</fullName>
        <label>Period Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Period_Start_Date__c</fullName>
        <label>Period Start Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Required_Supervisions__c</fullName>
        <inlineHelpText>Number of required Supervisions in this Research Period</inlineHelpText>
        <label>Required Supervisions</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Student_Programme__c</fullName>
        <label>Student Programme</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>You can only assign Research Periods to Student Programmes where Record Type = PGR Programme.</errorMessage>
            <filterItems>
                <field>Student_Programme__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>PGR Programme</value>
            </filterItems>
            <infoMessage>Oops... the Student Programme you have selected is not a PGR Programme.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Student_Programme__c</referenceTo>
        <relationshipLabel>Research Years</relationshipLabel>
        <relationshipName>Research_Years</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Transition_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transition Completed</label>
        <type>Checkbox</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Child of Student Programme for the management of PGR Student progression. Each record corresponds to one 'year' or 'research period' of a PGR programme. Supervision records are related to this object.</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Research Year</label><nameField>
        <label>Research Year Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Research Years</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>